# messenger

./: .gitignore  README.md
Client/: CMakeLists.txt  config.json  connection.cpp  connection.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwidget.ui.autosave
Server/: CMakeLists.txt  MEGAADDER.sql
Server/include/: foo.h
Server/include/Server/: databaseManager.h  server.h
Server/src/: databaseManager.cpp  foo.cpp  main.cpp  server.cpp
